--- a/Test/App.config
+++ b/Test/App.config
@@ -6,7 +6,7 @@
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network" from="mirsaeedi@outlook.com">
-        <network enableSsl="true" host="smtp-mail.outlook.com" port="587"  userName="mirsaeedi@outlook.com" password="udtaeeruhmmgmbwj" />
+        <network enableSsl="true" host="smtp-mail.outlook.com" port="587"  userName="" password="udtaeeruhmmgmbwj" />
       </smtp>
     </mailSettings>
   </system.net>
