--- a/Test/App.config
+++ b/Test/App.config
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network" from="mirsaeedi@outlook.com">
-        <network enableSsl="true" host="smtp-mail.outlook.com" port="587"  userName="" password="udtaeeruhmmgmbwj" />
+        <network enableSsl="true" host="smtp-mail.outlook.com" port="587" userName="" password="udtaeeruhmmgmbwj"/>
       </smtp>
     </mailSettings>
   </system.net>
